--- a/index.html
+++ b/index.html
@@ -317,11 +317,11 @@ a,
               <div class="nav-link w-nav-link dropdown">
   Offerings
     <div class="dropdown-menu">
-                    <a href="/offerings/amazon-redshift.html"
+                    <a href="./offerings/amazon-redshift.html"
                       >Amazon Redshift Solutions</a
                     >
                     <a
-                      href="/offerings/amazon-database-migration.html"
+                      href="./offerings/amazon-database-migration.html"
                      
                       >AWS Database Migration Service Delivery</a
                     >
@@ -329,20 +329,20 @@ a,
                       >AWS Glue</a
                     >
                     <a
-                      href="/offerings/amazon-cloudformation.html"
+                      href="./offerings/amazon-cloudformation.html"
                      
                       >AWS CloudFormation</a
                     >
-                    <a href="/offerings/amazon-tower.html"
+                    <a href="./offerings/amazon-tower.html"
                       >AWS Control Tower and Service Delivery Solutions</a
                     >
-                    <a href="/offerings/amazon-lambda.html"
+                    <a href="./offerings/amazon-lambda.html"
                       >AWS Lambda Service Delivery and Ready Programs</a
                     >
-                    <a href="/offerings/amazon-waf.html"
+                    <a href="./offerings/amazon-waf.html"
                       >AWS WAF Implementation and Security Solutions</a
                     >
-                    <a href="/offerings/amazon-api.html"
+                    <a href="./offerings/amazon-api.html"
                       >Amazon API Gateway Service Delivery</a
                     >
                   </div>
