Update nav error

--- a/index.html
+++ b/index.html
@@ -304,33 +304,52 @@ a,
           </div>
         </div>
       </section>
-      <div data-animation="default" data-collapse="medium" data-duration="400" data-easing="ease" data-easing2="ease"
-        role="banner" class="navbar w-nav">
-        <div class="padding-global">
-          <div class="nav-container">
-            <a href="index.html" aria-current="page" class="brand w-nav-brand w--current"><img
-                src="images/softgemlogo.svg" loading="lazy" alt="" class="logo"></a>
-            <nav role="navigation" class="nav-menu w-nav-menu">
-              <a href="#about" class="nav-link w-nav-link">About Us</a>
-              <a href="#Cloud-Upscaling" class="nav-link w-nav-link">Services</a>
-              <a href="#case-study" class="nav-link w-nav-link">Case study</a>
-              <div class="nav-link w-nav-link dropdown">
-  Offerings
-    <div class="dropdown-menu">
+     <div
+          data-animation="default"
+          data-collapse="medium"
+          data-duration="400"
+          data-easing="ease"
+          data-easing2="ease"
+          role="banner"
+          class="navbar w-nav"
+        >
+          <div class="padding-global">
+            <div class="nav-container">
+              <a
+                href="./index.html"
+                aria-current="page"
+                class="brand w-nav-brand w--current"
+              >
+                <img
+                  src="./images/softgemlogo.svg"
+                  loading="lazy"
+                  alt=""
+                  class="logo"
+                />
+              </a>
+              <nav role="navigation" class="nav-menu w-nav-menu">
+                <a href="./index.html#about" class="nav-link w-nav-link"
+                  >About Us</a
+                >
+                <a
+                  href="./index.html#Cloud-Upscaling"
+                  class="nav-link w-nav-link"
+                  >Services</a
+                >
+                <a href="./index.html#case-study" class="nav-link w-nav-link"
+                  >Case study</a
+                >
+                <div class="nav-link w-nav-link dropdown">
+                  Offerings
+                  <div class="dropdown-menu">
                     <a href="./offerings/amazon-redshift.html"
                       >Amazon Redshift Solutions</a
                     >
-                    <a
-                      href="./offerings/amazon-database-migration.html"
-                     
+                    <a href="./offerings/amazon-database-migration.html"
                       >AWS Database Migration Service Delivery</a
                     >
-                    <a href="/offerings/amazon-glue.html"
-                      >AWS Glue</a
-                    >
-                    <a
-                      href="./offerings/amazon-cloudformation.html"
-                     
+                    <a href="./offerings/amazon-glue.html">AWS Glue</a>
+                    <a href="./offerings/amazon-cloudformation.html"
                       >AWS CloudFormation</a
                     >
                     <a href="./offerings/amazon-tower.html"
@@ -346,17 +365,19 @@ a,
                       >Amazon API Gateway Service Delivery</a
                     >
                   </div>
-</div>
+                </div>
 
-              <a href="blog.html" class="nav-link hide w-nav-link">Blog</a>
-            </nav>
-            <div class="menu-button w-nav-button">
-              <div class="w-icon-nav-menu"></div>
+                <a href="blog.html" class="nav-link hide w-nav-link">Blog</a>
+              </nav>
+              <div class="menu-button w-nav-button">
+                <div class="w-icon-nav-menu"></div>
+              </div>
+              <a href="./contact-us.html" class="button is-nav w-button"
+                >Contact Us</a
+              >
             </div>
-            <a href="contact-us.html" class="button is-nav w-button">Contact Us</a>
           </div>
         </div>
-      </div>
       <div class="section_hero">
         <div class="padding-global">
           <div class="global-container">
