--- a/offerings/amazon-lambda.html
+++ b/offerings/amazon-lambda.html
@@ -146,7 +146,7 @@
           <div class="padding-global">
             <div class="nav-container">
               <a
-                href="./index.html"
+                href="../index.html"
                 aria-current="page"
                 class="brand w-nav-brand w--current"
               >
@@ -158,11 +158,15 @@
                 />
               </a>
               <nav role="navigation" class="nav-menu w-nav-menu">
-                <a href="./#about" class="nav-link w-nav-link">About Us</a>
-                <a href="./#Cloud-Upscaling" class="nav-link w-nav-link"
+                <a href="../index.html#about" class="nav-link w-nav-link"
+                  >About Us</a
+                >
+                <a
+                  href="../index.html#Cloud-Upscaling"
+                  class="nav-link w-nav-link"
                   >Services</a
                 >
-                <a href="./#case-study" class="nav-link w-nav-link"
+                <a href="../index.html#case-study" class="nav-link w-nav-link"
                   >Case study</a
                 >
                 <div class="nav-link w-nav-link dropdown">
@@ -197,7 +201,7 @@
               <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
               </div>
-              <a href="/contact-us.html" class="button is-nav w-button"
+              <a href="../contact-us.html" class="button is-nav w-button"
                 >Contact Us</a
               >
             </div>
@@ -316,7 +320,10 @@
                   transformative results with AWS Lambda. Examples include:
                 </p>
                 <div class="impact-container">
-                  <a href="/competencies/corebank.html" class="case-study-link">
+                  <a
+                    href="../competencies/corebank.html"
+                    class="case-study-link"
+                  >
                     <div class="case-study-item impact">
                       <img
                         src="../images/Bankly.svg"
@@ -338,7 +345,7 @@
                   </a>
                 </div>
                 <div class="impact-container">
-                  <a href="/competencies/kolisa.html" class="case-study-link">
+                  <a href="../competencies/kolisa.html" class="case-study-link">
                     <div class="case-study-item impact">
                       <img
                         src="../images/Bankly.svg"
@@ -366,8 +373,8 @@
                   Let’s Build the Future Together.
                 </p>
                 <p>
-                  <a href="/contact-us.html">Contact us today</a> to learn more
-                  about how we can help your organization harness the full
+                  <a href="../contact-us.html">Contact us today</a> to learn
+                  more about how we can help your organization harness the full
                   potential of AWS Lambda.
                 </p>
               </div>
