--- a/offerings/amazon-redshift.html
+++ b/offerings/amazon-redshift.html
@@ -158,11 +158,15 @@
                 />
               </a>
               <nav role="navigation" class="nav-menu w-nav-menu">
-                <a href="./#about" class="nav-link w-nav-link">About Us</a>
-                <a href="./#Cloud-Upscaling" class="nav-link w-nav-link"
+                <a href="../index.html#about" class="nav-link w-nav-link"
+                  >About Us</a
+                >
+                <a
+                  href="../index.html#Cloud-Upscaling"
+                  class="nav-link w-nav-link"
                   >Services</a
                 >
-                <a href="./#case-study" class="nav-link w-nav-link"
+                <a href="../index.html#case-study" class="nav-link w-nav-link"
                   >Case study</a
                 >
                 <div class="nav-link w-nav-link dropdown">
@@ -197,7 +201,7 @@
               <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
               </div>
-              <a href="/contact-us.html" class="button is-nav w-button"
+              <a href="../contact-us.html" class="button is-nav w-button"
                 >Contact Us</a
               >
             </div>
@@ -302,7 +306,7 @@
                 <p class="offerings-list-title">Real-World Impact</p>
                 <div class="impact-container">
                   <a
-                    href="/competencies/credevnet.html"
+                    href="../competencies/credevnet.html"
                     class="case-study-link"
                   >
                     <div class="case-study-item impact">
@@ -327,7 +331,10 @@
                 </div>
 
                 <div class="impact-container">
-                  <a href="/competencies/fewchore.html" class="case-study-link">
+                  <a
+                    href="../competencies/fewchore.html"
+                    class="case-study-link"
+                  >
                     <div class="case-study-item impact">
                       <img
                         src="../images/Bankly.svg"
@@ -355,9 +362,9 @@
                   Ready to transform your data?
                 </p>
                 <p>
-                  <a href="/contact-us.html">Contact us today</a> to explore how
-                  we can unlock the full potential of Amazon Redshift for your
-                  business.
+                  <a href="../contact-us.html">Contact us today</a> to explore
+                  how we can unlock the full potential of Amazon Redshift for
+                  your business.
                 </p>
               </div>
             </div>
