--- a/offerings/amazon-waf.html
+++ b/offerings/amazon-waf.html
@@ -146,7 +146,7 @@
           <div class="padding-global">
             <div class="nav-container">
               <a
-                href="./index.html"
+                href="../index.html"
                 aria-current="page"
                 class="brand w-nav-brand w--current"
               >
@@ -158,11 +158,15 @@
                 />
               </a>
               <nav role="navigation" class="nav-menu w-nav-menu">
-                <a href="./#about" class="nav-link w-nav-link">About Us</a>
-                <a href="./#Cloud-Upscaling" class="nav-link w-nav-link"
+                <a href="../index.html#about" class="nav-link w-nav-link"
+                  >About Us</a
+                >
+                <a
+                  href="../index.html#Cloud-Upscaling"
+                  class="nav-link w-nav-link"
                   >Services</a
                 >
-                <a href="./#case-study" class="nav-link w-nav-link"
+                <a href="../index.html#case-study" class="nav-link w-nav-link"
                   >Case study</a
                 >
                 <div class="nav-link w-nav-link dropdown">
@@ -197,7 +201,7 @@
               <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
               </div>
-              <a href="/contact-us.html" class="button is-nav w-button"
+              <a href="../contact-us.html" class="button is-nav w-button"
                 >Contact Us</a
               >
             </div>
@@ -315,7 +319,10 @@
               <div class="success">
                 <p class="offerings-list-title">Real-World Impact</p>
                 <div class="impact-container">
-                  <a href="/competencies/centric.html" class="case-study-link">
+                  <a
+                    href="../competencies/centric.html"
+                    class="case-study-link"
+                  >
                     <div class="case-study-item impact">
                       <img
                         src="../images/Bankly.svg"
@@ -339,7 +346,7 @@
 
                 <div class="impact-container">
                   <a
-                    href="/competencies/credevnet.html"
+                    href="../competencies/credevnet.html"
                     class="case-study-link"
                   >
                     <div class="case-study-item impact">
@@ -369,8 +376,8 @@
                 </p>
                 <p>
                   Let us help you safeguard your web applications with AWS WAF.
-                  <a href="/contact-us.html">Contact us today</a> to discuss how
-                  we can create a solution tailored to your needs.
+                  <a href="../contact-us.html">Contact us today</a> to discuss
+                  how we can create a solution tailored to your needs.
                 </p>
               </div>
             </div>
