--- a/contact-us.html
+++ b/contact-us.html
@@ -327,46 +327,52 @@ a,
           <div class="padding-global">
             <div class="nav-container">
               <a
-                href="index.html"
+                href="./index.html"
                 aria-current="page"
                 class="brand w-nav-brand w--current"
-                ><img
-                  src="images/softgemlogo.svg"
+              >
+                <img
+                  src="./images/softgemlogo.svg"
                   loading="lazy"
                   alt=""
                   class="logo"
-              /></a>
+                />
+              </a>
               <nav role="navigation" class="nav-menu w-nav-menu">
-                <a href="/#about" class="nav-link w-nav-link">About Us</a>
-                <a href="/#Cloud-Upscaling" class="nav-link w-nav-link"
+                <a href="./index.html#about" class="nav-link w-nav-link"
+                  >About Us</a
+                >
+                <a
+                  href="./index.html#Cloud-Upscaling"
+                  class="nav-link w-nav-link"
                   >Services</a
                 >
-                <a href="/#case-study" class="nav-link w-nav-link"
+                <a href="./index.html#case-study" class="nav-link w-nav-link"
                   >Case study</a
                 >
                 <div class="nav-link w-nav-link dropdown">
                   Offerings
                   <div class="dropdown-menu">
-                    <a href="/offerings/amazon-redshift.html"
+                    <a href="./offerings/amazon-redshift.html"
                       >Amazon Redshift Solutions</a
                     >
-                    <a href="/offerings/amazon-database-migration.html"
+                    <a href="./offerings/amazon-database-migration.html"
                       >AWS Database Migration Service Delivery</a
                     >
-                    <a href="/offerings/amazon-glue.html">AWS Glue</a>
-                    <a href="/offerings/amazon-cloudformation.html"
+                    <a href="./offerings/amazon-glue.html">AWS Glue</a>
+                    <a href="./offerings/amazon-cloudformation.html"
                       >AWS CloudFormation</a
                     >
-                    <a href="/offerings/amazon-tower.html"
+                    <a href="./offerings/amazon-tower.html"
                       >AWS Control Tower and Service Delivery Solutions</a
                     >
-                    <a href="/offerings/amazon-lambda.html"
+                    <a href="./offerings/amazon-lambda.html"
                       >AWS Lambda Service Delivery and Ready Programs</a
                     >
-                    <a href="/offerings/amazon-waf.html"
+                    <a href="./offerings/amazon-waf.html"
                       >AWS WAF Implementation and Security Solutions</a
                     >
-                    <a href="/offerings/amazon-api.html"
+                    <a href="./offerings/amazon-api.html"
                       >Amazon API Gateway Service Delivery</a
                     >
                   </div>
@@ -377,7 +383,7 @@ a,
               <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
               </div>
-              <a href="contact-us.html" class="button is-nav w-button"
+              <a href="./contact-us.html" class="button is-nav w-button"
                 >Contact Us</a
               >
             </div>
