--- a/offerings/amazon-api.html
+++ b/offerings/amazon-api.html
@@ -146,7 +146,7 @@
           <div class="padding-global">
             <div class="nav-container">
               <a
-                href="./index.html"
+                href="../index.html"
                 aria-current="page"
                 class="brand w-nav-brand w--current"
               >
@@ -158,11 +158,15 @@
                 />
               </a>
               <nav role="navigation" class="nav-menu w-nav-menu">
-                <a href="./#about" class="nav-link w-nav-link">About Us</a>
-                <a href="./#Cloud-Upscaling" class="nav-link w-nav-link"
+                <a href="../index.html#about" class="nav-link w-nav-link"
+                  >About Us</a
+                >
+                <a
+                  href="../index.html#Cloud-Upscaling"
+                  class="nav-link w-nav-link"
                   >Services</a
                 >
-                <a href="./#case-study" class="nav-link w-nav-link"
+                <a href="../index.html#case-study" class="nav-link w-nav-link"
                   >Case study</a
                 >
                 <div class="nav-link w-nav-link dropdown">
@@ -197,7 +201,7 @@
               <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
               </div>
-              <a href="/contact-us.html" class="button is-nav w-button"
+              <a href="../contact-us.html" class="button is-nav w-button"
                 >Contact Us</a
               >
             </div>
@@ -296,9 +300,12 @@
                   through real-world success stories:
                 </p>
                 <div class="impact-container">
-                  <a href="/competencies/ipaybtc.html" class="case-study-link">
+                  <a
+                    href="../competencies/ipaybtc.html"
+                    class="case-study-link"
+                  >
                     <div class="case-study-item impact">
-                      <img
+                      <img..
                         src="../images/Bankly.svg"
                         alt="Background 1"
                         class="case-study-background"
@@ -318,7 +325,10 @@
                   </a>
                 </div>
                 <div class="impact-container">
-                  <a href="/competencies/centric.html" class="case-study-link">
+                  <a
+                    href="../competencies/centric.html"
+                    class="case-study-link"
+                  >
                     <div class="case-study-item impact">
                       <img
                         src="../images/Bankly.svg"
@@ -350,8 +360,8 @@
                   business.
                 </p>
                 <p class="mt-1">
-                  <a href="/contact-us.html">Contact us today</a> to explore how
-                  we can tailor API solutions to your specific needs.
+                  <a href="../contact-us.html">Contact us today</a> to explore
+                  how we can tailor API solutions to your specific needs.
                 </p>
               </div>
             </div>
