--- a/offerings/amazon-cloudformation.html
+++ b/offerings/amazon-cloudformation.html
@@ -146,7 +146,7 @@
           <div class="padding-global">
             <div class="nav-container">
               <a
-                href="./index.html"
+                href="../index.html"
                 aria-current="page"
                 class="brand w-nav-brand w--current"
               >
@@ -158,11 +158,15 @@
                 />
               </a>
               <nav role="navigation" class="nav-menu w-nav-menu">
-                <a href="./#about" class="nav-link w-nav-link">About Us</a>
-                <a href="./#Cloud-Upscaling" class="nav-link w-nav-link"
+                <a href="../index.html#about" class="nav-link w-nav-link"
+                  >About Us</a
+                >
+                <a
+                  href="../index.html#Cloud-Upscaling"
+                  class="nav-link w-nav-link"
                   >Services</a
                 >
-                <a href="./#case-study" class="nav-link w-nav-link"
+                <a href="../index.html#case-study" class="nav-link w-nav-link"
                   >Case study</a
                 >
                 <div class="nav-link w-nav-link dropdown">
@@ -197,7 +201,7 @@
               <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
               </div>
-              <a href="/contact-us.html" class="button is-nav w-button"
+              <a href="../contact-us.html" class="button is-nav w-button"
                 >Contact Us</a
               >
             </div>
@@ -312,7 +316,10 @@
                   potential of AWS CloudFormation.
                 </p>
                 <div class="impact-container">
-                  <a href="/competencies/corebank.html" class="case-study-link">
+                  <a
+                    href="../competencies/corebank.html"
+                    class="case-study-link"
+                  >
                     <div class="case-study-item impact">
                       <img
                         src="../images/Bankly.svg"
@@ -333,7 +340,10 @@
                   </a>
                 </div>
                 <div class="impact-container">
-                  <a href="/competencies/fewchore.html" class="case-study-link">
+                  <a
+                    href="../competencies/fewchore.html"
+                    class="case-study-link"
+                  >
                     <div class="case-study-item impact">
                       <img
                         src="../images/Bankly.svg"
@@ -365,7 +375,7 @@
                   tailored to your unique needs.
                 </p>
                 <p class="mt-1">
-                  <a href="/contact-us.html"> Contact us today</a> to explore
+                  <a href="../contact-us.html"> Contact us today</a> to explore
                   how we can partner to transform your cloud infrastructure. Let
                   us help you write your next chapter in cloud innovation.
                 </p>
