--- a/offerings/amazon-database-migration.html
+++ b/offerings/amazon-database-migration.html
@@ -146,7 +146,7 @@
           <div class="padding-global">
             <div class="nav-container">
               <a
-                href="./index.html"
+                href="../index.html"
                 aria-current="page"
                 class="brand w-nav-brand w--current"
               >
@@ -158,11 +158,15 @@
                 />
               </a>
               <nav role="navigation" class="nav-menu w-nav-menu">
-                <a href="./#about" class="nav-link w-nav-link">About Us</a>
-                <a href="./#Cloud-Upscaling" class="nav-link w-nav-link"
+                <a href="../index.html#about" class="nav-link w-nav-link"
+                  >About Us</a
+                >
+                <a
+                  href="../index.html#Cloud-Upscaling"
+                  class="nav-link w-nav-link"
                   >Services</a
                 >
-                <a href="./#case-study" class="nav-link w-nav-link"
+                <a href="../index.html#case-study" class="nav-link w-nav-link"
                   >Case study</a
                 >
                 <div class="nav-link w-nav-link dropdown">
@@ -197,7 +201,7 @@
               <div class="menu-button w-nav-button">
                 <div class="w-icon-nav-menu"></div>
               </div>
-              <a href="/contact-us.html" class="button is-nav w-button"
+              <a href="../contact-us.html" class="button is-nav w-button"
                 >Contact Us</a
               >
             </div>
@@ -313,7 +317,10 @@
               <div class="success">
                 <p class="offerings-list-title">Real-World Success Stories</p>
                 <div class="impact-container">
-                  <a href="/competencies/vascon1.html" class="case-study-link">
+                  <a
+                    href="../competencies/vascon1.html"
+                    class="case-study-link"
+                  >
                     <div class="case-study-item impact">
                       <img
                         src="../images/Bankly.svg"
@@ -334,7 +341,10 @@
                   </a>
                 </div>
                 <div class="impact-container">
-                  <a href="/competencies/outcess.html" class="case-study-link">
+                  <a
+                    href="../competencies/outcess.html"
+                    class="case-study-link"
+                  >
                     <div class="case-study-item impact">
                       <img
                         src="../images/Bankly.svg"
@@ -359,7 +369,7 @@
               <div class="contact">
                 <p class="offerings-list-title">Ready to begin?</p>
                 <p>
-                  <a href="/contact-us.html"> Contact us today </a>
+                  <a href="../contact-us.html"> Contact us today </a>
                   to learn how we can help you leverage AWS Database Migration
                   Service to transform your data infrastructure and accelerate
                   your business growth.
