Add Sundry market competncs

--- a/index.html
+++ b/index.html
@@ -958,6 +958,13 @@ a,
                   <img src="new_images/outcess2.png" alt="Logo 9" class="case-study-logo">
                 </div>
               </a>
+                            <!-- Block 9 -->
+              <a href="competencies/sundry.html" class="case-study-link">
+                <div class="case-study-item">
+                  <img src="images/Bankly.svg" alt="Background 1" class="case-study-background">
+                  <img src="new_images/sundry.png" alt="Logo 1" class="case-study-logo">
+                </div>
+              </a>
             </div>
           </div>
         </div>
