--- a/index.html
+++ b/index.html
@@ -917,12 +917,12 @@ a,
                 </div>
               </a>
               <!-- Block 4 -->
-              <a href="competencies/ipaybtc.html" class="case-study-link">
-                <div class="case-study-item">
-                  <img src="images/Bankly.svg" alt="Background 4" class="case-study-background">
-                  <img src="new_images/ipayb.png" alt="Logo 4" class="case-study-logo">
-                </div>
-              </a>
+              // <a href="competencies/ipaybtc.html" class="case-study-link">
+              //   <div class="case-study-item">
+              //     <img src="images/Bankly.svg" alt="Background 4" class="case-study-background">
+              //     <img src="new_images/ipayb.png" alt="Logo 4" class="case-study-logo">
+              //   </div>
+              // </a>
               <!-- Block 5 -->
               <a href="competencies/halo.html" class="case-study-link">
                 <div class="case-study-item">
